syntax = "proto3";
package order.v1;

option go_package = "e-comm/order-service/order-service/v1;order";

service OrderService {
	rpc VerifyUser(VerifyUserRequest) returns (VerifyUserResponse) {};
	rpc CreateOrder(stream CreateOrderRequest) returns (stream CreateOrderResponse) {};
	rpc Charge(ChargeRequest) returns (ChargeResponse) {};
}

message VerifyUserRequest {
	string user_id = 1;
	string password = 2;
}

message VerifyUserResponse {
	bool is_verified = 1;
}

message CreateOrderRequest {
	string order_id = 1;
	string order_product = 2;
	bool is_paid = 3;
	string user_id = 4;
	OrderStatus order_status = 5;
	string order_amount = 6;
}

message CreateOrderResponse {
	OrderStatus order_status = 5;
}

message ChargeRequest {
	string user_id = 1;
	string order_id = 2;
	string order_amount = 3;
}

message ChargeResponse {
	bool is_paid = 1;
	string order_amount = 2;
}


enum OrderStatus {
	ORDER_STATUS_UNSPECIFIED = 0;
	ORDER_STATUS_PENDING = 1;
	ORDER_STATUS_SUCCESS = 2;
	ORDER_STATUS_FAILED = 3;
}